--- a/index.html
+++ b/index.html
@@ -44,7 +44,30 @@
 
     <div id="projects">
       <div class="azul-2">
-        <h2 class="subtitulo">Projetos</h2>
+        <h2 class="subtitulo">Projeto de Extensão Curricular</h2>
+      </div>
+      <section class="projects-section">
+        <div class="project-gallery">
+          <figure>
+            <img
+              src="imgs/Crie_uma_imagem_que_lembre_academia_com_um_ponto.jpg"
+              alt="Projeto 1"
+            />
+            <figcaption class="tituluzinho">
+              <a class="link-projeto"
+                target="_blank">Em Breve</a
+              >
+            </figcaption>
+          </figure>
+          
+          <!-- Adicione mais itens conforme necessário -->
+        </div>
+      </section>
+    </div>
+
+    <div id="projects2">
+      <div class="azul-2">
+        <h2 class="subtitulo">Projetos Anteriores</h2>
       </div>
       <section class="projects-section">
         <div class="project-gallery">
@@ -72,18 +95,7 @@
               >
             </figcaption>
           </figure>
-          <figure>
-            <img
-              src="imgs/Crie_uma_imagem_que_lembre_academia_com_um_ponto.jpg"
-              alt="Projeto 1"
-            />
-            <figcaption class="tituluzinho">
-              <a class="link-projeto"
-                target="_blank">Em Breve</a
-              >
-            </figcaption>
-          </figure>
-
+          
           <!-- Adicione mais itens conforme necessário -->
         </div>
       </section>
